--- a/assets/css/mycart.css
+++ b/assets/css/mycart.css
@@ -3,7 +3,7 @@
 }
 
 .cart-item .image {
-  padding: 50px 100px 50px 100px;
+  padding: 25px 50px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
